--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta
+			name="viewport"
+			content="minimum-scale=1, initial-scale=1, width=device-width"
+		/>
 		<meta name="theme-color" content="#d8d441" />
 		<meta
 			name="description"
 			content="Examilo | La solución para los procesos de evaluación y estadísticas de exámenes de alternativas múltiples."
 		/>
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700|Nunito:300,400,500,600,700,800&display=swap"
 			rel="stylesheet"
